--- a/internals/generators/endpoint/model.js.hbs
+++ b/internals/generators/endpoint/model.js.hbs
@@ -6,6 +6,11 @@ author: {
 type: Schema.Types.ObjectId,
 ref: 'user',
 },
+{{#each fields}}
+  {{this}}: {
+  type: Schema.Types.String,
+  },
+{{/each}}
 });
 
-module.exports = mongoose.model('post', PostSchema);
+module.exports = mongoose.model('{{ lowerCase name }}', {{ properCase name }}Schema);
