--- a/internals/generators/view/constants.js.hbs
+++ b/internals/generators/view/constants.js.hbs
@@ -4,4 +4,11 @@
  *
  */
 
-export const DEFAULT_ACTION = 'app/{{ properCase name }}/DEFAULT_ACTION';
+export const FETCH_{{ constantCase name }} = 'app/{{ properCase name }}/FETCH_{{ constantCase name }}';
+export const {{ constantCase name }}_RECEIVED = 'app/{{ properCase name }}/{{ constantCase name }}_RECEIVED';
+export const CREATE_{{ constantCase name }} = 'app/{{ properCase name }}/CREATE_{{ constantCase name }}';
+export const {{ constantCase name }}_CREATED = 'app/{{ properCase name }}/{{ constantCase name }}_CREATED';
+export const UPDATE_{{ constantCase name }} = 'app/{{ properCase name }}/UPDATE_{{ constantCase name }}';
+export const {{ constantCase name }}_UPDATED = 'app/{{ properCase name }}/{{ constantCase name }}_UPDATED';
+export const DELETE_{{ constantCase name }} = 'app/{{ properCase name }}/DELETE_{{ constantCase name }}';
+export const {{ constantCase name }}_DELETED = 'app/{{ properCase name }}/{{ constantCase name }}_DELETED';
