--- a/internals/generators/view/constants.js.hbs
+++ b/internals/generators/view/constants.js.hbs
@@ -4,8 +4,8 @@
  *
  */
 
-export const FETCH_{{ constantCase name }} = 'app/{{ properCase name }}/FETCH_{{ constantCase name }}';
-export const {{ constantCase name }}_RECEIVED = 'app/{{ properCase name }}/{{ constantCase name }}_RECEIVED';
+export const FETCH_{{ constantCase name }}S = 'app/{{ properCase name }}/FETCH_{{ constantCase name }}S';
+export const {{ constantCase name }}S_RECEIVED = 'app/{{ properCase name }}/{{ constantCase name }}S_RECEIVED';
 export const CREATE_{{ constantCase name }} = 'app/{{ properCase name }}/CREATE_{{ constantCase name }}';
 export const {{ constantCase name }}_CREATED = 'app/{{ properCase name }}/{{ constantCase name }}_CREATED';
 export const UPDATE_{{ constantCase name }} = 'app/{{ properCase name }}/UPDATE_{{ constantCase name }}';
