--- a/internals/generators/view/actions.js.hbs
+++ b/internals/generators/view/actions.js.hbs
@@ -16,10 +16,9 @@ import {
 } from './constants';
 
 
-export function fetch{{ properCase name }}s(payload) {
+export function fetch{{ properCase name }}s() {
   return {
     type: FETCH_{{ constantCase name }}S,
-    payload,
   };
 }
 
